5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1723_2504.log
== SUBMITION (2019-05-14 11:38:16) 
-- CODE:
qv = int(input("Digite a quantodade de virus: "))
ql = int(input("Digite a quantodade de leucocitos: "))
pv = float(input("Digite o percentual de virus: "))/100
pl = float(input("Digite o percentual de leucocitos: "))/100
cont = 0
soma = qv
soma2 = ql
while(soma2 < 2*soma):
	soma = soma + (soma * pv)
	soma2 = soma2 + (soma2*pl)
	cont = cont+1
print(cont


-- EXECUTION TIME:
0.164708
-- ERROR:
  File "/home/codebench/codes/1723/2504/main.py", line 14
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:18) 
-- CODE:
qv = int(input("Digite a quantodade de virus: "))
ql = int(input("Digite a quantodade de leucocitos: "))
pv = float(input("Digite o percentual de virus: "))/100
pl = float(input("Digite o percentual de leucocitos: "))/100
cont = 0
soma = qv
soma2 = ql
while(soma2 < 2*soma):
	soma = soma + (soma * pv)
	soma2 = soma2 + (soma2*pl)
	cont = cont+1
print(cont


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:38:27) 
-- CODE:
qv = int(input("Digite a quantodade de virus: "))
ql = int(input("Digite a quantodade de leucocitos: "))
pv = float(input("Digite o percentual de virus: "))/100
pl = float(input("Digite o percentual de leucocitos: "))/100
cont = 0
soma = qv
soma2 = ql
while(soma2 < 2*soma):
	soma = soma + (soma * pv)
	soma2 = soma2 + (soma2*pl)
	cont = cont+1
print(cont)


-- EXECUTION TIME:
0.143853
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
